# Netalyze

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh  keep-network-alive.sh  measure_signal.py
.github/workflows/: netperf_release.yaml
netperf/: Cargo.toml  README.md  build.sh
netperf/src/: main.rs
src/: iperf_output.json  main.rs
