[package]
name = "netalyze"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35" }
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serialport = {version = "4.3.0", default-features = false}
telegraf = "0.6.0"
